[package]
name = "kite"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.69"
clap = { version = "=4.1.8", features = ["derive"] }
once_cell = "1.17.1"
serde = { version = "=1.0.152", features = ["derive"] }
tokio = { version = "=1.26.0", features = ["full"] }
toml = "=0.7.2"
trust-dns-resolver = "=0.22.0"
varivari = { git = "https://github.com/hiraginoyuki/varivari", tag = "v0.2.0" }
