[package]
name = "kite"
version = "0.1.0"
edition = "2021"

# stdlib extension
[dependencies.tokio]
version = "=1.26.0"
features = ["macros", "rt-multi-thread", "fs", "io-util", "tracing"]

[dependencies]
# also stdlib extension
once_cell = "=1.17.1"

# user-facing formatting and logging
anyhow = "=1.0.69"
miette = { version = "=5.5.0", features = ["fancy"] }
tracing = "=0.1.37"
tracing-subscriber = "=0.3.16"
console-subscriber = "=0.1.8"

# parsing
clap = { version = "=4.1.8", features = ["derive"] }
serde = { version = "=1.0.152", features = ["derive"] }
toml = "=0.7.2"

# logic
trust-dns-resolver = "=0.22.0"
varivari = { git = "https://github.com/hiraginoyuki/varivari", tag = "v0.2.0" }
