[package]
name = "kite"
version = "0.1.0"
edition = "2021"

# stdlib extension
[dependencies.tokio]
version = "=1.26.0"
features = ["macros", "rt-multi-thread", "fs", "io-util", "tracing"]

[dependencies]
# also stdlib extension
tokio-util = { version = "=0.7.7", features = ["compat"] }
once_cell = "=1.17.1"
ignore = { git = "https://github.com/hiraginoyuki/rust-ignore.git" }

# user-facing formatting and logging
miette = { version = "=5.5.0", features = ["fancy"] }
tracing = "=0.1.37"
tracing-subscriber = "=0.3.16"
console-subscriber = "=0.1.8"

# parsing
clap = { version = "=4.1.8", features = ["derive"] }
serde = { version = "=1.0.152", features = ["derive"] }
toml = "=0.7.2"

# logic
trust-dns-resolver = "=0.22.0"
unsigned-varint = { version = "=0.7.1", features = ["futures"] }
